sol/2008_pj_f2_minicalc.txt
Mini-calculadora
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2008f2pj_minicalc.cpp: In function ‘int main()’:
2008f2pj_minicalc.cpp:14:15: error: ‘__gcd’ was not declared in this scope; did you mean ‘gcd’?
   14 |     int gcd = __gcd(D, Q);
      |               ^~~~~
      |               gcd
